force-app/main/default/objects/Inbound_Email_Staging__c/Inbound_Email_Staging__c.object-meta.xml
<CustomObject>
    <description>Durable landing record for every inbound broker email processed by the Email Service. Captures raw email content, headers, and attachment metadata for async processing and audit trail.</description>
    <label>Inbound Email Staging</label>
    <nameField>
        <displayFormat>IES-{0000000}</displayFormat>
        <label>Staging Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Email Stagings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>