force-app/main/default/objects/Inbound_Email_Staging__c/fields/Attachment_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Bytes__c</fullName>
    <description>Total bytes retained across every attachment file kept for this email (sum of byteSize across the retained list). Makes the oversized-email operational risk reportable — without it there is no way to ask how close real emails run to the heap/attachment ceilings before a broker's first-come-first-served claim could be lost.</description>
    <inlineHelpText>Populated by the attachment capture pipeline. Total retained bytes, not the vision-encoded size.</inlineHelpText>
    <label>Attachment Bytes</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>