force-app/main/default/objects/Inbound_Email_Staging__c/fields/Attachment_Count__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Count__c</fullName>
    <description>Number of attachment files retained (kept) for this email after InboundEmailAttachmentService.classify() applies the MIME/extension allow-list, the image size floor, and the MAX_ATTACHMENTS cap. Files dropped during classification are not counted here — see Dropped_Attachment_Notes__c for what was excluded and why.</description>
    <inlineHelpText>Populated by the attachment capture pipeline. Compare against Dropped_Attachment_Notes__c to see what was excluded.</inlineHelpText>
    <label>Attachment Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>