force-app/main/default/objects/Inbound_Email_Staging__c/fields/Dropped_Attachment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dropped_Attachment_Notes__c</fullName>
    <description>One line per attachment dropped during classification (filename | mime | bytes | reason), plus one line per ContentDocumentLink insert refusal recorded after the fact. Blank when nothing was dropped and no link was refused — do not read a blank value as "no attachments were sent".</description>
    <inlineHelpText>Populated by the attachment capture pipeline. Read this before assuming a broker sent no attachment.</inlineHelpText>
    <label>Dropped Attachment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>