force-app/main/default/objects/Inbound_Email_Staging__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error Detail</label>
    <length>32000</length>
    <description>Exception detail/stack trace when Status=Error</description>
    <type>LongTextArea</type>
</CustomField>