force-app/main/default/objects/Inbound_Email_Staging__c/fields/Extracted_JSON__c.field-meta.xml
<CustomField>
    <fullName>Extracted_JSON__c</fullName>
    <description>The raw LLM extraction response, stored verbatim before any routing decision is made, so it survives every branch of the routing tree including the hard relevance gate. This is the D3 tier-1 audit record of exactly what the model returned.</description>
    <inlineHelpText>Raw LLM response JSON. Written by the pipeline; not intended for direct editing.</inlineHelpText>
    <label>Extracted JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>