force-app/main/default/objects/Inbound_Email_Staging__c/fields/Forwarded_By__c.field-meta.xml
<CustomField>
    <fullName>Forwarded_By__c</fullName>
    <label>Forwarded By</label>
    <description>The monitored inbox that auto-forwarded this email (internal user email)</description>
    <type>Email</type>
</CustomField>