force-app/main/default/objects/Inbound_Email_Staging__c/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <label>From Address</label>
    <description>Envelope From address (broker in auto-forward)</description>
    <type>Email</type>
</CustomField>