force-app/main/default/objects/Inbound_Email_Staging__c/fields/Has_Image__c.field-meta.xml
<CustomField>
    <fullName>Has_Image__c</fullName>
    <label>Has Image</label>
    <description>True if an image attachment was found</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>