force-app/main/default/objects/Inbound_Email_Staging__c/fields/Image_Mime_Type__c.field-meta.xml
<CustomField>
    <fullName>Image_Mime_Type__c</fullName>
    <label>Image MIME Type</label>
    <length>255</length>
    <description>MIME type of the image (e.g., image/png)</description>
    <type>Text</type>
</CustomField>