force-app/main/default/objects/Inbound_Email_Staging__c/fields/Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Id__c</fullName>
    <label>Message ID</label>
    <length>255</length>
    <description>RFC Message-ID for idempotency and threading</description>
    <type>Text</type>
</CustomField>