force-app/main/default/objects/Inbound_Email_Staging__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <length>255</length>
    <description>Routing outcome label (e.g., 'New Lead (winner)', 'Competing Submission', 'Reply Thread'). Rows created before 2026-07-31 may carry the retired labels 'Competing Duplicate' / 'Competing Duplicate (race)'. Gate-related labels: 'Not Acquisition (gated)' (LLM classifier hard gate) and 'Not Acquisition (pre-filtered)' (deterministic envelope/header pre-filter, no LLM callout). Multi-property emails (2026-07-31+) use the prefix 'Multi-Property (N): ...' summarizing each property's outcome, and may carry the suffixes ' [truncated: X of M]' (more properties found than MAX_PROPERTIES) or ' [unclaimed: lock timeout]' (a property failed safe under lock contention).</description>
    <type>Text</type>
</CustomField>