force-app/main/default/objects/Inbound_Email_Staging__c/fields/Processed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Processed_DateTime__c</fullName>
    <label>Processed Date/Time</label>
    <description>When async processing completed</description>
    <type>DateTime</type>
</CustomField>