force-app/main/default/objects/Inbound_Email_Staging__c/fields/Property_Count__c.field-meta.xml
<CustomField>
    <fullName>Property_Count__c</fullName>
    <description>Number of properties the LLM extraction found in this email (pre-truncation). Compare against the line count in Routed_Record_Ids__c to detect a MAX_PROPERTIES truncation.</description>
    <inlineHelpText>Populated by the routing pipeline from the extraction result.</inlineHelpText>
    <label>Property Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>