force-app/main/default/objects/Inbound_Email_Staging__c/fields/Raw_Body__c.field-meta.xml
<CustomField>
    <fullName>Raw_Body__c</fullName>
    <description>Full raw body of the inbound broker email as received by the Email Service, before any parsing or extraction.</description>
    <inlineHelpText>Verbatim email body text/HTML captured at intake. Not edited after processing.</inlineHelpText>
    <label>Email Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>