force-app/main/default/objects/Inbound_Email_Staging__c/fields/Raw_Headers__c.field-meta.xml
<CustomField>
    <fullName>Raw_Headers__c</fullName>
    <description>All RFC headers, one per line</description>
    <inlineHelpText>Full raw header block captured verbatim from the inbound email for audit and threading lookups.</inlineHelpText>
    <label>Email Headers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>