force-app/main/default/objects/Inbound_Email_Staging__c/fields/References__c.field-meta.xml
<CustomField>
    <fullName>References__c</fullName>
    <label>References</label>
    <length>32768</length>
    <description>RFC References header for conversation threading</description>
    <type>LongTextArea</type>
</CustomField>