force-app/main/default/objects/Inbound_Email_Staging__c/fields/Result_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Result_Record_Id__c</fullName>
    <label>Result Record ID</label>
    <length>18</length>
    <description>Lead/Opportunity/Contact Id (the routing outcome)</description>
    <type>Text</type>
</CustomField>