force-app/main/default/objects/Inbound_Email_Staging__c/fields/Routed_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Routed_Record_Ids__c</fullName>
    <description>One line per property routed from this email, in processing order: normalized address | outcome | record Id. The complete N-result audit for a multi-property email — the only place the full property-to-record mapping exists.</description>
    <inlineHelpText>Populated by the routing pipeline; one line per property processed from this email.</inlineHelpText>
    <label>Routed Record IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>