force-app/main/default/objects/Inbound_Email_Staging__c/fields/Routing_Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Routing_Attempt_Count__c</fullName>
    <description>How many times ExtractAddressQueueable has died with an unhandled exception while routing this row (Status__c = 'Failed'). Written only by RoutingFailureFinalizer; read only by RoutingRetrySweepBatch to enforce the retry attempt cap. Zero on a row that has never failed.</description>
    <inlineHelpText>Incremented by the routing Finalizer on each unhandled-exception death. The retry sweeper abandons a row once this reaches the attempt cap.</inlineHelpText>
    <label>Routing Attempt Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>