force-app/main/default/objects/Inbound_Email_Staging__c/listViews/Files_Retry_Outstanding.listView-meta.xml
<ListView>
    <fullName>Files_Retry_Outstanding</fullName>
    <columns>NAME</columns>
    <columns>From_Address__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Outcome__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Attachment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Attachment_Status__c</field>
        <operation>equals</operation>
        <value>Pending,Partial,Failed</value>
    </filters>
    <label>Files: Retry Outstanding</label>
</ListView>