force-app/main/default/objects/Inbound_Email_Staging__c/listViews/Gated_Not_Acquisition.listView-meta.xml
<ListView>
    <fullName>Gated_Not_Acquisition</fullName>
    <columns>NAME</columns>
    <columns>From_Address__c</columns>
    <columns>Subject__c</columns>
    <columns>Outcome__c</columns>
    <columns>Processed_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Outcome__c</field>
        <operation>startsWith</operation>
        <value>Not Acquisition</value>
    </filters>
    <label>Gated: Not Acquisition</label>
</ListView>