force-app/main/default/objects/Inbound_Email_Staging__c/listViews/LLM_Unavailable.listView-meta.xml
<ListView>
    <fullName>LLM_Unavailable</fullName>
    <columns>NAME</columns>
    <columns>From_Address__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Outcome__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Outcome__c</field>
        <operation>contains</operation>
        <value>LLM unavailable</value>
    </filters>
    <label>LLM Unavailable</label>
</ListView>