force-app/main/default/objects/Inbound_Email_Staging__c/listViews/Routing_Failed.listView-meta.xml
<ListView>
    <fullName>Routing_Failed</fullName>
    <columns>NAME</columns>
    <columns>From_Address__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Outcome__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Routing_Attempt_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Routing: Failed (retrying)</label>
</ListView>