force-app/main/default/objects/Inbound_Email_Staging__c/listViews/Routing_Pending.listView-meta.xml
<ListView>
    <fullName>Routing_Pending</fullName>
    <columns>NAME</columns>
    <columns>From_Address__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Outcome__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Routing: Pending</label>
</ListView>